[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main/MenuPause.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=12]
font_path = "res://font/Asquire.otf"

[sub_resource type="DynamicFont" id=13]
size = 17
font_data = SubResource( 12 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.6, 0.6, 0.6, 0.847059 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.6, 0.6, 0.6, 0.705882 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2( 0, 3.41 )

[sub_resource type="DynamicFontData" id=15]
font_path = "res://font/Coffee Spark.otf"

[sub_resource type="DynamicFont" id=16]
size = 34
font_data = SubResource( 15 )

[node name="MenuPause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
color = Color( 0.227451, 0.223529, 0.223529, 0.215686 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.5
margin_top = -81.0
margin_right = 159.5
margin_bottom = 81.0
custom_constants/separation = 8

[node name="Start" type="Button" parent="Menu"]
margin_right = 319.0
margin_bottom = 48.0
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/normal = SubResource( 14 )
text = "RESUME"

[node name="Setting" type="Button" parent="Menu"]
margin_top = 56.0
margin_right = 319.0
margin_bottom = 105.0
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/normal = SubResource( 14 )
text = "SETTING"

[node name="Exit" type="Button" parent="Menu"]
margin_top = 113.0
margin_right = 319.0
margin_bottom = 162.0
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/normal = SubResource( 14 )
text = "EXIT"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.0
margin_top = -162.0
margin_right = 157.0
margin_bottom = -129.0
rect_rotation = 1.33092
custom_fonts/font = SubResource( 16 )
text = "ADVENTUROUS FROG"
max_lines_visible = 0

[connection signal="pressed" from="Menu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Menu/Setting" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_exit_pressed"]
